[gd_scene load_steps=3 format=3 uid="uid://y1jbwcpi2mjq"]

[ext_resource type="Script" path="res://player/Skills/skill_thrust.gd" id="1_c81ep"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_y52wy"]
radius = 20.0
height = 54.0

[node name="SkillThrust" type="Node2D"]
script = ExtResource("1_c81ep")

[node name="AttackBox" type="Area2D" parent="."]
collision_layer = 68
collision_mask = 68
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackBox"]
position = Vector2(7, -44)
shape = SubResource("CapsuleShape2D_y52wy")
disabled = true
debug_color = Color(0.54902, 0.192157, 0.890196, 0.537255)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AttackBox"]
build_mode = 1
polygon = PackedVector2Array(6, -1, 0, -9, -7, -1)
disabled = true

[node name="SkillingTimer" type="Timer" parent="."]
one_shot = true

[node name="SkillTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="AttackBox" to="." method="_on_attack_box_area_entered"]
[connection signal="body_entered" from="AttackBox" to="." method="_on_attack_box_body_entered"]
[connection signal="timeout" from="SkillingTimer" to="." method="_on_skilling_timer_timeout"]
[connection signal="timeout" from="SkillTimer" to="." method="_on_skill_timer_timeout"]
